# sweeply

./: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clean/: aitools.rs  application.rs  browser.rs  cleaner.rs  context.rs  developer.rs  mod.rs  progress.rs  scanner.rs  system.rs  traits.rs  utils.rs
src-tauri/src/commands/: clean.rs  disk_usage.rs  duplicate_files.rs  keychain.rs  large_files.rs  login_items.rs  mod.rs  network.rs  system.rs  uninstall.rs
src-tauri/src/models/: clean.rs  keychain.rs  mod.rs  network.rs  uninstall.rs
src/__tests__/: Button.test.tsx  useClean.test.ts  useDebounce.test.ts  utils.test.ts
src/components/: ErrorBoundary.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  index.ts
src/components/ui/: Button.tsx  Card.tsx  Checkbox.tsx  CircularProgress.tsx  Dialog.tsx  EmptyState.tsx  PageContainer.tsx  PathPicker.tsx  PermissionBanner.tsx  ProgressBar.tsx  ScanIdleView.tsx  ScanProgressView.tsx  ScanResultLayout.tsx  Skeleton.tsx  StatusBadge.tsx  Toast.tsx  Tooltip.tsx  VirtualList.tsx  index.ts
src/constants/: app.ts  index.ts  navigation.ts  routes.ts
src/hooks/: index.ts  useAsyncTask.ts  useClean.ts  useKeychain.ts  useNetworkSpeed.ts  usePageData.ts  usePermissionCheck.ts  useResizableSidebar.ts  useSmoothProgress.ts  useSpeedHistory.ts  useTauriEvent.ts  useTheme.ts  useUninstall.ts  useVirtualList.ts
src/pages/: AppFileGroupCard.tsx  AppIconTile.tsx  CleanPage.tsx  DiskUsagePage.tsx  DuplicateFilesPage.tsx  KeychainPage.tsx  LargeFilesPage.tsx  LoginItemsPage.tsx  NetworkSpeedPage.tsx  SystemInfoPage.tsx  UninstallPage.tsx
src/router/: index.tsx
src/services/: cleanService.ts  diskUsageService.ts  duplicateFileService.ts  index.ts  keychainService.ts  largeFileService.ts  loginItemService.ts  networkService.ts  systemService.ts  uninstallService.ts
src/styles/: globals.css
src/types/: clean.ts  common.ts  diskUsage.ts  duplicateFiles.ts  index.ts  keychain.ts  largeFiles.ts  loginItems.ts  network.ts  system.ts  uninstaller.ts
src/utils/: cache.ts  cn.ts  error.ts  format.ts  index.ts  nprogress.ts
