[package]
name = "sweeply"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sweeply_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 系统信息（进程、磁盘、CPU、内存）
sysinfo = "0.32"
# 文件移至废纸篓（跨平台）
trash = "5"
# 目录递归遍历
walkdir = "2"
# 系统标准目录路径
dirs = "6"
# 文件通配符匹配
glob = "0.3"
# 异步 HTTP 客户端（网络测速）
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# 异步流工具（上传流式 body）
futures-util = "0.3"
# 异步运行时
tokio = { version = "1", features = ["rt", "macros", "time"] }
# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }
# 日志输出
log = "0.4"
env_logger = "0.11"
# plist 文件解析（读取 .app 的 Info.plist）
plist = "1"
# .icns 图标文件解析（提取 macOS 应用图标）
icns = "0.3"
# base64 编码（图标数据转 base64）
base64 = "0.22"
# PNG 编码（将 icns 像素数据编码为 PNG）
png = "0.17"
# SHA-256 哈希（重复文件检测）
sha2 = "0.10"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
